--- a/idc-servicio-usuarios-dev.properties
+++ b/idc-servicio-usuarios-dev.properties
@@ -4,7 +4,7 @@
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 
 # url base del servidor zipkin para registro de trazas
-spring.zipkin.base-url=http://zipkin-server-memory:9411/
+spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://mysql8_idc_usuarios:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
