Cambio base de datos

--- a/idc-servicio-censo-qa.properties
+++ b/idc-servicio-censo-qa.properties
@@ -1,4 +1,4 @@
-# idc-servicio-censo-local.properties
+# idc-servicio-censo-qa.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql11_idc_censo:5432/db_idc_censo
+spring.datasource.url=jdbc:postgresql://pgsql12_alpine_idc_censo:5432/db_idc_censo
 spring.datasource.username=idc-censo-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
