--- a/idc-servicio-ani-dev.properties
+++ b/idc-servicio-ani-dev.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql11_idc_ani:5432//db_idc_ani
+spring.datasource.url=jdbc:postgresql://pgsql12_alpine_idc_ani:5432//db_idc_ani
 spring.datasource.username=idc-ani-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
