ajuste encoding archivo

--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -10,7 +10,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 spring.datasource.url=mysql://mysql8_idc_estaciones:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
