--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -1,4 +1,4 @@
-﻿# idc-servicio-estaciones-dev.properties
+# idc-servicio-estaciones-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
