adición url feign

--- a/idc-servicio-censo-qa.properties
+++ b/idc-servicio-censo-qa.properties
@@ -17,6 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
+feign.url=http://azure-docker-lab-dev.eastus.cloudapp.azure.com:8090/api
+
 #swagger config
 api.version=1.0
 swagger.enabled=true
