Ajuste servidor feign

--- a/idc-servicio-censo-qa.properties
+++ b/idc-servicio-censo-qa.properties
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-qa.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev.eastus.cloudapp.azure.com:8090/api
 
 #swagger config
 api.version=1.0
