--- a/idc-servicio-divipol-qa.properties
+++ b/idc-servicio-divipol-qa.properties
@@ -12,7 +12,7 @@ spring.datasource.username=idc-divipol-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
