--- a/idc-servicio-estaciones-local.properties
+++ b/idc-servicio-estaciones-local.properties
@@ -1,7 +1,7 @@
 # idc-servicio-usuarios-dev.properties
 
 # url base del micro-servicio de eureka 
-eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
