--- a/idc-servicio-estaciones-local.properties
+++ b/idc-servicio-estaciones-local.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 feign.url=http://localhost:8090/api
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.jpa.hibernate.ddl-auto=create
 
 # logging hibbernate level
