--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_usuarios:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql8_idc_estaciones:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
