--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -8,7 +8,10 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://mysql8_idc_estaciones:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-# logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://azure-docker-idc-dev3.eastus.cloudapp.azure.com:8090/api
