Ajuste archivo configuración

--- a/idc-servicio-inscripciones-prod.properties
+++ b/idc-servicio-inscripciones-prod.properties
@@ -12,6 +12,6 @@ spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripc
 
 #spring.datasource.username=springboot
 #spring.datasource.password==Carvajal2019*
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
