--- a/idc-servicio-estaciones-local.properties
+++ b/idc-servicio-estaciones-local.properties
@@ -4,13 +4,13 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # url base del servidor zipkin para registro de trazas
-spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
+spring.zipkin.base-url=http://localhost:9411/
 
 feign.url=http://localhost:8090/api
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
