--- a/idc-servicio-estaciones-local.properties
+++ b/idc-servicio-estaciones-local.properties
@@ -10,7 +10,7 @@ feign.url=http://localhost:8090/api
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
