--- a/idc-servicio-inscripciones-local.properties
+++ b/idc-servicio-inscripciones-local.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://localhost:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.jpa.hibernate.ddl-auto=create
 
 # logging hibbernate level
