--- a/idc-servicio-inscripciones-dev.properties
+++ b/idc-servicio-inscripciones-dev.properties
@@ -10,6 +10,8 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://azure-docker-idc-dev3.eastus.cloudapp.azure.com:8090/api
