--- a/idc-servicio-inscripciones-qa.properties
+++ b/idc-servicio-inscripciones-qa.properties
@@ -15,6 +15,7 @@ spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripc
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
+feign.url=http://azure-docker-idc-qa4.eastus.cloudapp.azure.com:8090/api
 
 
 
