--- a/idc-servicio-usuarios-local.properties
+++ b/idc-servicio-usuarios-local.properties
@@ -8,7 +8,7 @@ spring.zipkin.base-url=http://localhost:9411/
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
