--- a/idc-servicio-diagnostico-accept.properties
+++ b/idc-servicio-diagnostico-accept.properties
@@ -11,3 +11,5 @@ spring.zipkin.base-url=http://zipkin-server-memory:9411/
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://azure-docker-idc-rc4.eastus.cloudapp.azure.com:8090/api
