--- a/idc-servicio-inscripciones-qa.properties
+++ b/idc-servicio-inscripciones-qa.properties
@@ -7,15 +7,22 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+# conexion PostgresSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_divipol
+spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
+#spring.datasource.url=jdbc:postgresql://azure-docker-idc-dev4.eastus.cloudapp.azure.com:5437/db_idc_inscripcion
 
-#spring.datasource.username=springboot
-#spring.datasource.password==Carvajal2019*
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=idc-inscripcion-admin
+spring.datasource.password=Carvajal2019*
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.hibernate.ddl-auto=create
+
 
 logging.level.org.hibernate.SQL=debug
-feign.url=http://azure-docker-idc-qa4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
 
 
 
