--- a/idc-servicio-inscripciones-dev.properties
+++ b/idc-servicio-inscripciones-dev.properties
@@ -7,11 +7,12 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 
-spring.jpa.hibernate.ddl-auto=update
+# conexion PostgresSQL
+spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
+
+spring.jpa.hibernate.ddl-auto=create
+
 
 logging.level.org.hibernate.SQL=debug
-
-feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
