--- a/idc-servicio-inscripciones-qa.properties
+++ b/idc-servicio-inscripciones-qa.properties
@@ -8,21 +8,14 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_divipol
+
 spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
-#spring.datasource.url=jdbc:postgresql://azure-docker-idc-dev4.eastus.cloudapp.azure.com:5437/db_idc_inscripcion
 
-spring.datasource.username=idc-inscripcion-admin
-spring.datasource.password=Carvajal2019*
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-#spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 logging.level.org.hibernate.SQL=debug
-feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
 
 
 
