--- a/idc-servicio-reportes-dev.properties
+++ b/idc-servicio-reportes-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
