--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -10,8 +10,8 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 spring.datasource.url=jdbc:mysql://mysql8_idc_estaciones:3306/db_idc_estaciones?user=idc-estaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
