--- a/idc-servicio-parametros-dev.properties
+++ b/idc-servicio-parametros-dev.properties
@@ -11,6 +11,6 @@ spring.zipkin.base-url=http://zipkin-server-memory:9411/
 spring.datasource.url=jdbc:mysql://mysql8_idc_parametros:3306/db_idc_parametros?user=idc-parametros-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
