--- a/idc-servicio-reportes-dev.properties
+++ b/idc-servicio-reportes-dev.properties
@@ -12,9 +12,9 @@ spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
