--- a/idc-servicio-usuarios-dev.properties
+++ b/idc-servicio-usuarios-dev.properties
@@ -8,9 +8,9 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 spring.datasource.url=jdbc:mysql://mysql8_idc_usuarios:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
