--- a/idc-servicio-reportes-dev.properties
+++ b/idc-servicio-reportes-dev.properties
@@ -17,4 +17,4 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-qa5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
