Actualización de archivo

--- a/idc-servicio-mensajero-dev.properties
+++ b/idc-servicio-mensajero-dev.properties
@@ -14,6 +14,6 @@ spring.rabbitmq.host=azure-docker-idc-dev5.eastus.cloudapp.azure.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-idc.rabbitmq.exchange=idc.estaciones_exc,idc.usuarios_exc,idc.inscripciones_exc,idc.diagnosticos_exc
-idc.rabbitmq.queue=idc.estaciones_queue,idc.usuarios_queue,idc.inscripciones_queue,idc.diagnosticos_queue
-idc.rabbitmq.routingkey=idc.estaciones_rk,idc.usuarios_rk,idc.inscripciones_rk,idc.diagnosticos_rk
+idc.rabbitmq.exchange=idc.estaciones_exc,idc.usuarios_exc,idc.inscripciones_exc,idc.diagnosticos_exc,idc.auditoria_exc
+idc.rabbitmq.queue=idc.estaciones_queue,idc.usuarios_queue,idc.inscripciones_queue,idc.diagnosticos_queue,idc.auditoria_queue
+idc.rabbitmq.routingkey=idc.estaciones_rk,idc.usuarios_rk,idc.inscripciones_rk,idc.diagnosticos_rk,idc.auditorias_rk
