--- a/idc-servicio-inscripciones-accept.properties
+++ b/idc-servicio-inscripciones-accept.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-rc4.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
 
 
 
