--- a/idc-servicio-indata-accept.properties
+++ b/idc-servicio-indata-accept.properties
@@ -10,7 +10,7 @@ spring.sleuth.sampler.probability=1.0
 logging.level.org.hibernate.SQL=debug
 
 #RabbitMQ
-spring.rabbitmq.host=azure-docker-idc-rc4.eastus.cloudapp.azure.com
+spring.rabbitmq.host=azure-docker-idc-msrc.eastus.cloudapp.azure.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -19,6 +19,7 @@ idc.rabbitmq.usuariosqueue=idc.usuarios_queue
 idc.rabbitmq.inscripcionesqueue=idc.inscripciones_queue
 idc.rabbitmq.diagnosticosqueue=idc.diagnosticos_queue
 idc.rabbitmq.biometriaqueue=idc.biometria_queue
+idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
