--- a/idc-servicio-estaciones-qa.properties
+++ b/idc-servicio-estaciones-qa.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-qa5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
 
 #swagger config
 api.version=1.0
