--- a/idc-servicio-rango-dev.properties
+++ b/idc-servicio-rango-dev.properties
@@ -5,11 +5,9 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_autorizaciones:3306/db_idc_autorizaciones?user=idc-autorizaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql8_idc_rango:3306/db_idc_rango?user=idc-rango-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
-
-feign.url=http://idc-servicio-zuul-server:8090/api
