--- a/idc-servicio-usuarios-prod.properties
+++ b/idc-servicio-usuarios-prod.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://idc-servicio-zuul-server:8090/api
