--- a/idc-servicio-rango-dev.properties
+++ b/idc-servicio-rango-dev.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://idc-servicio-zuul-server:8090/api
