Actualización de archivos

--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -21,9 +21,9 @@ idc.rabbitmq.diagnosticosqueue=idc.diagnosticos_queue
 idc.rabbitmq.biometriaqueue=idc.biometria_queue
 
 #Conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central
-spring.datasource.username=Administrador
-spring.datasource.password=Carvajal2019*
+spring.datasource.url=jdbc:sqlserver://central-idc-sql-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central
+spring.datasource.username=administrador
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
