--- a/idc-servicio-inscripciones-accept.properties
+++ b/idc-servicio-inscripciones-accept.properties
@@ -3,19 +3,22 @@
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 
+# idc-servicio-inscripciones-accept.properties
+
+# url base del micro-servicio de eureka 
+eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_inscripciones:3306/db_idc_inscripciones?user=idc-inscripciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+# conexion PostgresSQL
 
-#spring.datasource.username=springboot
-#spring.datasource.password==Carvajal2019*
+spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.SQL=debug
 
+logging.level.org.hibernate.SQL=debug
 feign.url=http://idc-servicio-zuul-server:8090/api
 
 
