Actualización de archivos

--- a/idc-servicio-reportes-qa.properties
+++ b/idc-servicio-reportes-qa.properties
@@ -8,7 +8,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # Conexión SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
-spring.datasource.username=administrador
+spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
