--- a/idc-servicio-indata-accept.properties
+++ b/idc-servicio-indata-accept.properties
@@ -20,6 +20,9 @@ idc.rabbitmq.inscripcionesqueue=idc.inscripciones_queue
 idc.rabbitmq.diagnosticosqueue=idc.diagnosticos_queue
 idc.rabbitmq.biometriaqueue=idc.biometria_queue
 idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
+idc.rabbitmq.kitqueue=idc.kit_queue
+idc.rabbitmq.solicitudqueue=idc.solicitud_queue
+
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
