--- a/idc-servicio-indata-dev.properties
+++ b/idc-servicio-indata-dev.properties
@@ -19,6 +19,10 @@ idc.rabbitmq.usuariosqueue=idc.usuarios_queue
 idc.rabbitmq.inscripcionesqueue=idc.inscripciones_queue
 idc.rabbitmq.diagnosticosqueue=idc.diagnosticos_queue
 idc.rabbitmq.biometriaqueue=idc.biometria_queue
+idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
+idc.rabbitmq.kitqueue=idc.kit_queue
+idc.rabbitmq.solicitudqueue=idc.solicitud_queue
+
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
