--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -22,6 +22,7 @@ idc.rabbitmq.biometriaqueue=idc.biometria_queue
 idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
 idc.rabbitmq.kitqueue=idc.kit_queue
 idc.rabbitmq.solicitudqueue=idc.solicitud_queue
+idc.rabbitmq.perfilqueue=idc.perfil_queue
 
 
 #Conexion SQL Server
