--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -31,4 +31,4 @@ spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
