Actualización de archivos

--- a/idc-servicio-rango-accept.properties
+++ b/idc-servicio-rango-accept.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
+#Intervalo mínimo que debe tener el rango (ms)
+rango.minintervalo = 3600000
