--- a/idc-servicio-indata-accept.properties
+++ b/idc-servicio-indata-accept.properties
@@ -22,10 +22,11 @@ idc.rabbitmq.biometriaqueue=idc.biometria_queue
 idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
 idc.rabbitmq.kitqueue=idc.kit_queue
 idc.rabbitmq.solicitudqueue=idc.solicitud_queue
+idc.rabbitmq.perfilqueue=idc.perfil_queue
 
 
 #Conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
+spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-RC
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
