--- a/idc-servicio-solicitud-accept.properties
+++ b/idc-servicio-solicitud-accept.properties
@@ -12,7 +12,7 @@ spring.datasource.username=idc-solicitud-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
