--- a/idc-servicio-indata-dev.properties
+++ b/idc-servicio-indata-dev.properties
@@ -23,6 +23,8 @@ idc.rabbitmq.auditoriaqueue=idc.auditoria_queue
 idc.rabbitmq.kitqueue=idc.kit_queue
 idc.rabbitmq.solicitudqueue=idc.solicitud_queue
 idc.rabbitmq.perfilqueue=idc.perfil_queue
+idc.rabbitmq.impresionqueue=idc.impresion_queue
+idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 
 
 #Conexion SQL Server
