--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -25,6 +25,7 @@ idc.rabbitmq.solicitudqueue=idc.solicitud_queue
 idc.rabbitmq.perfilqueue=idc.perfil_queue
 idc.rabbitmq.impresionqueue=idc.impresion_queue
 idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
+idc.rabbitmq.motivostraza=idc.motivostraza_queue
 
 
 #Conexion SQL Server
