--- a/idc-servicio-responsables-dev.properties
+++ b/idc-servicio-responsables-dev.properties
@@ -1,11 +1,9 @@
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
-
 # conexion Postgres
-spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5442/db_idc_responsables
+spring.datasource.url=jdbc:postgresql://pgsql12_idc_responsables:5432/db_idc_responsables
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 
