--- a/idc-servicio-inscripciones-qa.properties
+++ b/idc-servicio-inscripciones-qa.properties
@@ -10,7 +10,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion PostgresSQL
 
 spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 logging.level.org.hibernate.SQL=debug
