--- a/idc-servicio-parametros-qa.properties
+++ b/idc-servicio-parametros-qa.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://mysql8_idc_parametros:3306/db_idc_parametros?
 
 #spring.datasource.username=springboot
 #spring.datasource.password==Carvajal2019*
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
