--- a/idc-servicio-importacion-dev.properties
+++ b/idc-servicio-importacion-dev.properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-request-size=10GB
 
 # files storage location (stores all files uploaded via REST API)
 storage.location=./uploads
-
+app.upload.dir= ./uploads
 
 
 
