--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
+# url base del servidor zipkin para registro de trazas
+spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
+
 # parametros de autenticacion oauth - pc
 config.security.oauth.client.id=idc-client
 config.security.oauth.client.secret=Carvajal2019*
