--- a/application.properties
+++ b/application.properties
@@ -6,4 +6,4 @@ config.security.oauth.client.id=idc-client
 config.security.oauth.client.secret=Carvajal2019*
 
 # jwt key - generacion token
-config.security.oauth.jwt.key=carvaja_idc_secret_key_2020_
+config.securityw.oauth.jwt.key=carvaja_idc_secret_key_2020_
