--- a/idc-servicio-importacion-dev.properties
+++ b/idc-servicio-importacion-dev.properties
@@ -9,8 +9,11 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion MySQL
 spring.jpa.hibernate.ddl-auto=none
 
-spring.servlet.multipart.max-file-size=10GB
-spring.servlet.multipart.max-request-size=10GB
+spring.servlet.multipart.max-file-size=900000000
+spring.servlet.multipart.max-request-size=900000000
+
+spring.http.multipart.max-file-size=900000000
+spring.http.multipart.max-request-size=900000000
 
 
 # files storage location (stores all files uploaded via REST API)
