--- a/idc-servicio-importacion-dev.properties
+++ b/idc-servicio-importacion-dev.properties
@@ -9,11 +9,14 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion MySQL
 spring.jpa.hibernate.ddl-auto=none
 
-spring.servlet.multipart.max-file-size=900000000
-spring.servlet.multipart.max-request-size=900000000
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
-spring.http.multipart.max-file-size=900000000
-spring.http.multipart.max-request-size=900000000
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
+
+multipart.max-file-size=100MB
+multipart.max-request-size=100MB
 
 
 # files storage location (stores all files uploaded via REST API)
