--- a/idc-servicio-formularios-dev.properties
+++ b/idc-servicio-formularios-dev.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+spring.servlet.multipart.max-file-size=40MB
+spring.servlet.multipart.max-request-size=10GB
