--- a/idc-servicio-formularios-dev.properties
+++ b/idc-servicio-formularios-dev.properties
@@ -17,5 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-spring.servlet.multipart.max-file-size=-1
-spring.servlet.multipart.max-request-size=-1
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
