--- a/idc-servicio-formularios-local.properties
+++ b/idc-servicio-formularios-local.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
