--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -26,6 +26,7 @@ idc.rabbitmq.perfilqueue=idc.perfil_queue
 idc.rabbitmq.impresionqueue=idc.impresion_queue
 idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 idc.rabbitmq.motivostraza=idc.motivostraza_queue
+idc.rabbitmq.puestoregistraduria=idc.puestoregistraduria_queue
 
 
 #Conexion SQL Server
