--- a/idc-servicio-importacion-dev.properties
+++ b/idc-servicio-importacion-dev.properties
@@ -20,8 +20,7 @@ multipart.max-request-size=100MB
 
 
 # files storage location (stores all files uploaded via REST API)
-storage.location=./uploads
-app.upload.dir= ./uploads
+app.upload.dir= ./idcimportacion
 
 
 
