--- a/idc-servicio-mensajero-qa.properties
+++ b/idc-servicio-mensajero-qa.properties
@@ -14,6 +14,6 @@ spring.rabbitmq.host=azure-docker-idc-msqa.eastus.cloudapp.azure.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-idc.rabbitmq.exchange=idc.estaciones_exc,idc.usuarios_exc,idc.inscripciones_exc,idc.diagnosticos_exc,idc.auditoria_exc,idc.kit_exc,idc.solicitud_exc,idc.perfil_exc,idc.impresion_exc,idc.aprobacion_exc,idc.motivostraza_exc,idc.puestoregistraduria_exc
-idc.rabbitmq.queue=idc.estaciones_queue,idc.usuarios_queue,idc.inscripciones_queue,idc.diagnosticos_queue,idc.auditoria_queue,idc.kit_queue,idc.solicitud_queue,idc.perfil_queue,idc.impresion_queue,idc.aprobacion_queue,idc.motivostraza_queue,idc.puestoregistraduria_queue
-idc.rabbitmq.routingkey=idc.estaciones_rk,idc.usuarios_rk,idc.inscripciones_rk,idc.diagnosticos_rk,idc.auditorias_rk,idc.kit_rk,idc.solicitud_rk,idc.perfil_rk,idc.impresion_rk,idc.aprobacion_rk,idc.motivostraza_rk,idc.puestoregistraduria_rk
+idc.rabbitmq.exchange=idc.estaciones_exc,idc.usuarios_exc,idc.inscripciones_exc,idc.diagnosticos_exc,idc.auditoria_exc,idc.kit_exc,idc.solicitud_exc,idc.perfil_exc,idc.impresion_exc,idc.aprobacion_exc,idc.motivostraza_exc,idc.puestoregistraduria_exc,idc.aprobacionins_exc
+idc.rabbitmq.queue=idc.estaciones_queue,idc.usuarios_queue,idc.inscripciones_queue,idc.diagnosticos_queue,idc.auditoria_queue,idc.kit_queue,idc.solicitud_queue,idc.perfil_queue,idc.impresion_queue,idc.aprobacion_queue,idc.motivostraza_queue,idc.puestoregistraduria_queue,idc.aprobacionins_queue
+idc.rabbitmq.routingkey=idc.estaciones_rk,idc.usuarios_rk,idc.inscripciones_rk,idc.diagnosticos_rk,idc.auditorias_rk,idc.kit_rk,idc.solicitud_rk,idc.perfil_rk,idc.impresion_rk,idc.aprobacion_rk,idc.motivostraza_rk,idc.puestoregistraduria_rk,idc.aprobacionins_rk
