--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -27,6 +27,7 @@ idc.rabbitmq.impresionqueue=idc.impresion_queue
 idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 idc.rabbitmq.motivostraza=idc.motivostraza_queue
 idc.rabbitmq.puestoregistraduria=idc.puestoregistraduria_queue
+idc.rabbitmq.aprobacionins=idc.aprobacionins_queue
 
 
 #Conexion SQL Server
