--- a/idc-servicio-indata-accept.properties
+++ b/idc-servicio-indata-accept.properties
@@ -27,12 +27,13 @@ idc.rabbitmq.impresionqueue=idc.impresion_queue
 idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 idc.rabbitmq.motivostraza=idc.motivostraza_queue
 idc.rabbitmq.puestoregistraduria=idc.puestoregistraduria_queue
+idc.rabbitmq.aprobacionins=idc.aprobacionins_queue
 
 
 #Conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-RC
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-RC
 spring.datasource.username=Administrador
-spring.datasource.password=Carvajal2019*
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
