--- a/idc-servicio-importacion-accept.properties
+++ b/idc-servicio-importacion-accept.properties
@@ -14,9 +14,6 @@ spring.servlet.multipart.max-request-size=10GB
 
 
 spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-RC
-#spring.datasource.url=jdbc:sqlserver://asnsqlbog20\\SQLEXPRESS;databaseName=Temp
-#spring.datasource.username=sa
-#spring.datasource.password=Sql2012R2
 
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
@@ -29,11 +26,6 @@ spring.jpa.hibernate.ddl-auto=update
 # files storage location (stores all files uploaded via REST API)
 app.upload.dir= ./idcimportacion/IDC-Import/rc
 
-
-
-
-
-
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
