--- a/idc-servicio-importacion-dev.properties
+++ b/idc-servicio-importacion-dev.properties
@@ -18,13 +18,19 @@ spring.http.multipart.max-request-size=100MB
 multipart.max-file-size=100MB
 multipart.max-request-size=100MB
 
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
+
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
 
 # files storage location (stores all files uploaded via REST API)
-app.upload.dir= ./idcimportacion
-
-
-
+app.upload.dir= ./idcimportacion/IDC-Import/dev
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
