Ajuste en properties de DEV de Indata

--- a/idc-servicio-indata-dev.properties
+++ b/idc-servicio-indata-dev.properties
@@ -28,6 +28,10 @@ idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 idc.rabbitmq.motivostraza=idc.motivostraza_queue
 idc.rabbitmq.puestoregistraduria=idc.puestoregistraduria_queue
 idc.rabbitmq.aprobacionins=idc.aprobacionins_queue
+idc.rabbitmq.remisionqueue=idc.remision_queue
+idc.rabbitmq.detalleremisionqueue=idc.detalleremision_queue
+idc.rabbitmq.cupoqueue=idc.cupo_queue
+idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
