--- a/idc-servicio-inscripciones-accept.properties
+++ b/idc-servicio-inscripciones-accept.properties
@@ -17,6 +17,8 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+
 
 logging.level.org.hibernate.SQL=debug
 feign.url=http://idc-servicio-zuul-server:8090/api
