Se agrega cola en mensajero

--- a/idc-servicio-indata-dev.properties
+++ b/idc-servicio-indata-dev.properties
@@ -32,6 +32,7 @@ idc.rabbitmq.remisionqueue=idc.remision_queue
 idc.rabbitmq.detalleremisionqueue=idc.detalleremision_queue
 idc.rabbitmq.cupoqueue=idc.cupo_queue
 idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
+idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
