Registro de colas para PDF

--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -28,6 +28,11 @@ idc.rabbitmq.aprobacionqueue=idc.aprobacion_queue
 idc.rabbitmq.motivostraza=idc.motivostraza_queue
 idc.rabbitmq.puestoregistraduria=idc.puestoregistraduria_queue
 idc.rabbitmq.aprobacionins=idc.aprobacionins_queue
+idc.rabbitmq.remisionqueue=idc.remision_queue
+idc.rabbitmq.detalleremisionqueue=idc.detalleremision_queue
+idc.rabbitmq.cupoqueue=idc.cupo_queue
+idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
+idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
 
 
 #Conexion SQL Server
