--- a/idc-servicio-inscripciones-dev.properties
+++ b/idc-servicio-inscripciones-dev.properties
@@ -2,14 +2,14 @@
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
+spring.datasource.url=jdbc:postgresql://pgsql12-idc-inscripcion:5432/db_idc_inscripcion
 
 spring.jpa.hibernate.ddl-auto=update
 
