Adición, actualización de archivos

--- a/idc-servicio-divipol-local.properties
+++ b/idc-servicio-divipol-local.properties
@@ -17,6 +17,11 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
+feign.url=http://idc-servicio-zuul-server:8090/api
+
+#Broker mensajeria
+idc.broker=rabbitmq
+
 #swagger config
 api.version=1.0
 swagger.enabled=true
