--- a/idc-servicio-divipol-accept.properties
+++ b/idc-servicio-divipol-accept.properties
@@ -19,6 +19,9 @@ logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
 
+#Broker mensajeria
+idc.broker=rabbitmq
+
 #swagger config
 api.version=1.0
 swagger.enabled=true
