Actualización del archivo

--- a/idc-servicio-divipol-local.properties
+++ b/idc-servicio-divipol-local.properties
@@ -7,7 +7,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://localhost:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_divipol
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_divipol
+spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5432/db_idc_divipol
 spring.datasource.username=idc-divipol-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -17,7 +18,8 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idc-servicio-zuul-server:8090/api
+feign.url=http://azure-docker-idc-msdev.eastus.cloudapp.azure.com:8090/api
 
 #Broker mensajeria
 idc.broker=rabbitmq
