Actualización de archivos

--- a/idc-servicio-auditoria-accept.properties
+++ b/idc-servicio-auditoria-accept.properties
@@ -17,3 +17,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 feign.url=http://idc-servicio-zuul-server:8090/api
 
+#Broker mensajeria
+idc.broker=rabbitmq
+
