--- a/idc-servicio-diagnostico-dev.properties
+++ b/idc-servicio-diagnostico-dev.properties
@@ -21,6 +21,9 @@ logging.level.org.hibernate.SQL=info
 #feign.url=http://localhost:8090/api
 feign.url=http://idc-servicio-zuul-server:8090/api
 
+#Broker mensajeria
+idc.broker=rabbitmq
+
 
 
 
