--- a/idc-servicio-diagnostico-local.properties
+++ b/idc-servicio-diagnostico-local.properties
@@ -11,3 +11,6 @@ spring.zipkin.base-url=http://zipkin-server-memory:9411/
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
+
+#Broker mensajeria
+idc.broker=rabbitmq
