--- a/idc-servicio-diagnostico-qa.properties
+++ b/idc-servicio-diagnostico-qa.properties
@@ -19,3 +19,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=info
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
+#Broker mensajeria
+idc.broker=rabbitmq
