--- a/idc-servicio-auditoria-dev.properties
+++ b/idc-servicio-auditoria-dev.properties
@@ -16,3 +16,6 @@ logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
 
+#Broker mensajeria
+idc.broker=rabbitmq
+
