Ajuste en properties Formularios local

--- a/idc-servicio-formularios-local.properties
+++ b/idc-servicio-formularios-local.properties
@@ -7,8 +7,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://localhost:9411/
 
 # conexion PostgresSQL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_formularios
-spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5439/db_idc_formularios
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_idc_formularios
+#spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5439/db_idc_formularios
 spring.datasource.username=idc-formulario-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
