--- a/idc-servicio-inscripciones-dev.properties
+++ b/idc-servicio-inscripciones-dev.properties
@@ -7,9 +7,10 @@ eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-
-# conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://sqlserver_idc_inscripcion:1433;databaseName=db_idc_inscripciones
+spring.datasource.username=sa
+spring.datasource.password=Carvajal2019*
 
 spring.jpa.hibernate.ddl-auto=update
 
