--- a/idc-servicio-usuarios-k8s-dev.properties
+++ b/idc-servicio-usuarios-k8s-dev.properties
@@ -1,7 +1,7 @@
 # idc-servicio-usuarios-dev.properties
 
 # url base del micro-servicio de eureka 
-eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://10.107.222.134:8761/eureka/
 eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
