Ajuste en properties de solicitudes k8s

--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -7,7 +7,8 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql-idc-solicitud:5432/db_idc_solicitud
+#spring.datasource.url=jdbc:postgresql://pgsql-idc-solicitud:5432/db_idc_solicitud
+spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5438/db_idc_solicitud
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
