--- a/idc-servicio-auditoria-k8s-dev.properties
+++ b/idc-servicio-auditoria-k8s-dev.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 #spring.datasource.url=jdbc:mysql://mysql8-idc-auditoria:3306/db_idc_auditoria?user=root&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3306/db_idc_auditoria?user=root&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3308/db_idc_auditoria?user=idc-auditoria-admin&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
