--- a/idc-servicio-autorizacion-k8s-dev.properties
+++ b/idc-servicio-autorizacion-k8s-dev.properties
@@ -6,7 +6,8 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8-idc-autorizaciones:3306/db_idc_autorizaciones?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://mysql8-idc-autorizaciones:3306/db_idc_autorizaciones?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3311/db_idc_autorizaciones?user=idc-autorizaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
