--- a/idc-servicio-cupos-k8s-dev.properties
+++ b/idc-servicio-cupos-k8s-dev.properties
@@ -7,7 +7,8 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql-idc-cupo:5432/db_idc_cupo
+#spring.datasource.url=jdbc:postgresql://pgsql-idc-cupo:5432/db_idc_cupo
+spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_cupo
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
