--- a/idc-servicio-notificaciones-k8s-dev.properties
+++ b/idc-servicio-notificaciones-k8s-dev.properties
@@ -10,7 +10,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion PostgresSQL
 #spring.datasource.url=jdbc:postgresql://pgsql-idc-notificaciones:5432/db_idc_notificaciones
 spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_notificaciones
-spring.datasource.username=postgres
+spring.datasource.username=idc-notificaciones-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
