--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion PostgresSQL
 #spring.datasource.url=jdbc:postgresql://pgsql-idc-solicitud:5432/db_idc_solicitud
 spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_solicitud
-spring.datasource.username=postgres
+spring.datasource.username=idc-solicitud-admin
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
