--- a/idc-servicio-oauth-dev.properties
+++ b/idc-servicio-oauth-dev.properties
@@ -4,3 +4,4 @@
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 
 eureka.instance.preferIpAddress = true
+feign.url=http://idc-servicio-zuul-server:8090/api
