--- a/idc-servicio-cierre-dev.properties
+++ b/idc-servicio-cierre-dev.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://sqlserver_idc_estaciones:1433;databaseName=db_idc_estaciones
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones
 spring.datasource.username=sa
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -21,7 +21,7 @@ hibernate.hbm2ddl.auto=update
 logging.level.org.hibernate.SQL=debug
 
 
-spring.second-datasource.url = jdbc:sqlserver://sqlserver_idc_estaciones:1433;databaseName=db_idc_configcierres
+spring.second-datasource.url = jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres
 spring.second-datasource.username = sa
 spring.second-datasource.password = Carvajal2019*
 spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
