--- a/idc-servicio-cierre-dev.properties
+++ b/idc-servicio-cierre-dev.properties
@@ -26,6 +26,7 @@ spring.second-datasource.username = sa
 spring.second-datasource.password = Carvajal2020*
 spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
 logging.level.org.hibernate.SQL=debug
