--- a/idc-servicio-oauth-dev.properties
+++ b/idc-servicio-oauth-dev.properties
@@ -4,4 +4,5 @@
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 
 eureka.instance.preferIpAddress = true
-feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idc-servicio-zuul-server:8090/api
+feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
