--- a/idc-servicio-updater-k8s-dev.properties
+++ b/idc-servicio-updater-k8s-dev.properties
@@ -25,5 +25,5 @@ feign.url=http://idc-servicio-zuul-server:8090/api
 app.download.dir= ./idcupdater/
 #app.download.dir= c:/temp/
 
-version.ruta.zip = /updater/download
+version.ruta.zip = updater/download
 
