ajuste formularios k8s para create

--- a/idc-servicio-formularios-k8s-dev.properties
+++ b/idc-servicio-formularios-k8s-dev.properties
@@ -28,3 +28,5 @@ logging.level.org.hibernate.SQL=debug
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
+feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
