--- a/idc-servicio-freeaprobacion-k8s-dev.properties
+++ b/idc-servicio-freeaprobacion-k8s-dev.properties
@@ -19,6 +19,8 @@ spring.second-datasource.url = jdbc:sqlserver://central-idc-20.eastus.cloudapp.a
 spring.second-datasource.username = Administrador
 spring.second-datasource.password = Carvajal2020*
 
+feign.url=http://idc-servicio-zuul-server:8090/api
+
 
 
 
