--- a/idc-servicio-reportes-qa.properties
+++ b/idc-servicio-reportes-qa.properties
@@ -1,7 +1,7 @@
 # idc-servicio-usuarios-dev.properties
-
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
@@ -18,3 +18,4 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
