--- a/idc-servicio-ani-qa.properties
+++ b/idc-servicio-ani-qa.properties
@@ -1,17 +1,18 @@
 # idc-servicio-ani-divipol.properties
 
-# url base del micro-servicio de eureka 
+# url base del micro-servicio de eureka
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql12_alpine_idc_ani:5432/db_idc_ani
-spring.datasource.username=idc-ani-admin
-spring.datasource.password=Carvajal2019*
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_ani_qa
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
