--- a/idc-servicio-autorizacion-qa.properties
+++ b/idc-servicio-autorizacion-qa.properties
@@ -1,13 +1,16 @@
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_autorizaciones:3306/db_idc_autorizaciones?user=idc-autorizaciones-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_autorizaciones_qa
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
