--- a/idc-servicio-cierre-qa.properties
+++ b/idc-servicio-cierre-qa.properties
@@ -1,32 +1,29 @@
 # idc-servicio-cierre-dev.properties
-
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://sqlServer_idc_estacione:1433;databaseName=db_idc_estaciones
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones_qa
 spring.datasource.username=sa
-spring.datasource.password=Carvajal2019*
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-hibernate.hbm2ddl.auto=update
+
 
 
 logging.level.org.hibernate.SQL=debug
 
 
-spring.second-datasource.url = jdbc:sqlserver://sqlServer_idc_estacione:1433;databaseName=db_idc_configcierres
+spring.second-datasource.url = jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres_qa
 spring.second-datasource.username = sa
-spring.second-datasource.password = Carvajal2019*
+spring.second-datasource.password = Carvajal2020*
 spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-
 
 logging.level.org.hibernate.SQL=debug
 feign.url=http://idc-servicio-zuul-server:8090/api
