--- a/idc-servicio-importacion-qa.properties
+++ b/idc-servicio-importacion-qa.properties
@@ -2,6 +2,7 @@
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
@@ -9,8 +10,15 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion MySQL
 spring.jpa.hibernate.ddl-auto=none
 
-spring.servlet.multipart.max-file-size=10GB
-spring.servlet.multipart.max-request-size=10GB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
+
+multipart.max-file-size=100MB
+multipart.max-request-size=100MB
+
 spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
 
 spring.datasource.username=Administrador
