--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -1,5 +1,6 @@
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
@@ -10,7 +11,7 @@ spring.sleuth.sampler.probability=1.0
 logging.level.org.hibernate.SQL=debug
 
 #RabbitMQ
-spring.rabbitmq.host=azure-docker-idc-msqa.eastus.cloudapp.azure.com
+spring.rabbitmq.host=idc-rabbitmq38-alpine
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -33,7 +34,7 @@ idc.rabbitmq.detalleremisionqueue=idc.detalleremision_queue
 idc.rabbitmq.cupoqueue=idc.cupo_queue
 idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
 idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
-
+idc.rabbitmq.aprobacionimagenesqueue=idc.aprobacionimagenes_queue
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
@@ -42,3 +43,4 @@ spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
+
