--- a/idc-servicio-inscripciones-qa.properties
+++ b/idc-servicio-inscripciones-qa.properties
@@ -1,20 +1,22 @@
-# idc-servicio-inscripciones-qa.properties
+# idc-servicio-inscripciones-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion PostgresSQL
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones_qa
 
-spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_inscripcion
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
 logging.level.org.hibernate.SQL=debug
 feign.url=http://idc-servicio-zuul-server:8090/api
-
-
-
