--- a/idc-servicio-parametros-qa.properties
+++ b/idc-servicio-parametros-qa.properties
@@ -1,20 +1,18 @@
-# idc-servicio-parametros-qa.properties
+# idc-servicio-parametros-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_parametros:3306/db_idc_parametros?user=idc-parametros-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-
-#spring.datasource.username=springboot
-#spring.datasource.password==Carvajal2019*
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_parametros_qa
+spring.datasource.username=sa
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-logging.level.org.hibernate.SQL=debug
-
 
 
