--- a/idc-servicio-rango-qa.properties
+++ b/idc-servicio-rango-qa.properties
@@ -1,17 +1,19 @@
-# url base del micro-servicio de eureka 
+# idc-servicio-rango-k8s-dev.propertie# url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_rango:3306/db_idc_rango?user=idc-rango-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_rango_qa
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
+#feign.url=http://idc-servicio-zuul-server:8090/api
 feign.url=http://idc-servicio-zuul-server:8090/api
 
 #Intervalo mínimo que debe tener el rango (ms)
