--- a/idc-servicio-solicitud-qa.properties
+++ b/idc-servicio-solicitud-qa.properties
@@ -1,18 +1,29 @@
-# idc-servicio-divipol-dev.properties
-
+# idc-servicio-solicitud-k8s-dev.properties
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql_idc_solicitud:5432/db_idc_solicitud
-spring.datasource.username=idc-solicitud-admin
-spring.datasource.password=Carvajal2019*
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.datasource.url=jdbc:postgresql://pgsql-idc-solicitud:5432/db_idc_solicitud
+#spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_solicitud
+#spring.datasource.username=idc-solicitud-admin
+#spring.datasource.password=Carvajal2019*
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_solicitud_qa
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://idc-servicio-zuul-server:8090/api
