--- a/idc-servicio-updater-qa.properties
+++ b/idc-servicio-updater-qa.properties
@@ -1,15 +1,15 @@
-# idc-servicio-cierre-dev.properties
+# idc-servicio-updater-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -25,4 +25,5 @@ feign.url=http://idc-servicio-zuul-server:8090/api
 app.download.dir= ./idcupdater/
 #app.download.dir= c:/temp/
 
-version.ruta.zip = /updater/download
+version.ruta.zip = updater/download
+
