Ajuste en properties de formularios y solicitud

--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -26,4 +26,4 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
+feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
