--- a/idc-servicio-rango-k8s-dev.properties
+++ b/idc-servicio-rango-k8s-dev.properties
@@ -13,8 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-#feign.url=http://idc-servicio-zuul-server:8090/api
-feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
+feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
 
 #Intervalo mínimo que debe tener el rango (ms)
 rango.minintervalo = 3600000
