ajuste en properties de usuarios

--- a/idc-servicio-formularios-k8s-dev.properties
+++ b/idc-servicio-formularios-k8s-dev.properties
@@ -29,4 +29,5 @@ logging.level.org.hibernate.SQL=debug
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
-feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
+feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
