--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -26,4 +26,5 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
+feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
