Configuración de conexión a la DB
Configuración de conexión a la DB

--- a/idc-servicio-importacion-qa.properties
+++ b/idc-servicio-importacion-qa.properties
@@ -19,7 +19,7 @@ spring.http.multipart.max-request-size=100MB
 multipart.max-file-size=100MB
 multipart.max-request-size=100MB
 
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
 
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
