Configuración de conexión a la DB
Configuración de conexión a la DB

--- a/idc-servicio-freeaprobacion-k8s-dev.properties
+++ b/idc-servicio-freeaprobacion-k8s-dev.properties
@@ -6,8 +6,8 @@ eureka.instance.preferIpAddress = true
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones
-spring.datasource.username=sa
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones
+spring.datasource.username=administrador
 spring.datasource.password=Carvajal2020*
 spring.jpa.hibernate.ddl-auto=none
 
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 
 
-spring.second-datasource.url = jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-k8s-DEV
+spring.second-datasource.url = jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-k8s-DEV
 spring.second-datasource.username = Administrador
 spring.second-datasource.password = Carvajal2020*
 
