Configuración de conexión a la DB
Configuración de conexión a la DB

--- a/idc-servicio-inscripciones-k8s-dev.properties
+++ b/idc-servicio-inscripciones-k8s-dev.properties
@@ -8,7 +8,7 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones
 
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
